package com.yyf.app.ch12;

public class SubSystemOne {

    public void m1() {
        System.out.println("子系统1");
    }
}
