package com.yyf.app.ch12;

public class SubSystemThree {

    public void m3() {
        System.out.println("子系统3");
    }
}
