package com.yyf.app.ch12;

public class SubSystemTwo {

    public void m2() {
        System.out.println("子系统2");
    }
}
